--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,10 +22,12 @@
     "strictPropertyInitialization": false,
     "typeRoots": [
       "./node_modules/@types"
-    ]
+    ],
+    "outDir": "out"
   },
   "exclude": [
     "node_modules",
-    "cdk.out"
+    "cdk.out",
+    "out"
   ]
 }
